--- a/html/print.html
+++ b/html/print.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="第2章.html"><strong aria-hidden="true">1.1.1.</strong> 第2章</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item expanded "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="第2章.html"><strong aria-hidden="true">1.1.1.</strong> 第2章</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item expanded "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item expanded "><a href="智能指针.html"><strong aria-hidden="true">2.3.</strong> 智能指针</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -156,6 +156,11 @@
 <p>对于当一个十进制数是<code>2^n</code> n为整数时，可以把n表示成<code>i+4j</code> ,其中<code>0&lt;=i&lt;=3</code> ,那么这个十进制数可以直接写成对应的十六进制:<code>0x2^i 后面+j个0</code>.例如:十进制下:2的11次方，<code>n=11=3+4*2</code> ，可以直接写成十六进制:<code>0x800</code>.</p>
 <p>而对于十六进制与十进制的转换,可以用短除法和乘法</p>
 </blockquote>
+<div class="table-wrapper"><table><thead><tr><th>十六进制</th><th style="text-align: center">0</th><th style="text-align: center">1</th><th style="text-align: center">2</th><th style="text-align: center">3</th><th>4</th><th style="text-align: center">5</th><th style="text-align: center">6</th><th style="text-align: center">7</th><th style="text-align: center">8</th><th style="text-align: center">9</th><th>A</th><th style="text-align: center">B</th><th style="text-align: center">C</th><th style="text-align: center">D</th><th style="text-align: center">E</th><th style="text-align: center">F</th></tr></thead><tbody>
+<tr><td>十进制</td><td style="text-align: center">0</td><td style="text-align: center">1</td><td style="text-align: center">2</td><td style="text-align: center">3</td><td>4</td><td style="text-align: center">5</td><td style="text-align: center">6</td><td style="text-align: center">7</td><td style="text-align: center">8</td><td style="text-align: center">9</td><td>10</td><td style="text-align: center">11</td><td style="text-align: center">12</td><td style="text-align: center">13</td><td style="text-align: center">14</td><td style="text-align: center">15</td></tr>
+<tr><td>二进制</td><td style="text-align: center">0000</td><td style="text-align: center">0001</td><td style="text-align: center">0010</td><td style="text-align: center">0011</td><td>0100</td><td style="text-align: center">0101</td><td style="text-align: center">0110</td><td style="text-align: center">0111</td><td style="text-align: center">1000</td><td style="text-align: center">1001</td><td>1010</td><td style="text-align: center">1011</td><td style="text-align: center">1100</td><td style="text-align: center">1101</td><td style="text-align: center">1110</td><td style="text-align: center">1111</td></tr>
+</tbody></table>
+</div>
 <h2 id="两种顺序存储字节的方法"><a class="header" href="#两种顺序存储字节的方法">两种顺序存储字节的方法</a></h2>
 <ul>
 <li>大端法:最高有效字节在最前面   (跟手写数字一样)</li>
@@ -163,6 +168,35 @@
 </ul>
 <h2 id="布尔代数"><a class="header" href="#布尔代数">布尔代数</a></h2>
 <p>对于<strong>二进制表示</strong>|<strong>位向量</strong>:<code>[01101001]</code> 来说，表示集合中含有的元素是<code>0,3,5,6</code>.使用这种编码集合的方法时，布尔运算<code>|</code> 对应集合的<strong>并</strong>,<code>&amp;</code> 对应集合的<strong>交</strong>,<code>~</code> 对应集合的<strong>补</strong>.</p>
+<blockquote>
+<p>对于十六进制数地位级运算，先将十六进制数的各个参数扩展成对应的二进制表示，然后再做二进制运算，最后转回十六进制。</p>
+</blockquote>
+<h2 id="逻辑运算"><a class="header" href="#逻辑运算">逻辑运算</a></h2>
+<p><code>||</code>,<code>&amp;&amp;</code>,<code>!</code>，对应命题逻辑的<code>OR</code>,<code>AND</code>,<code>NOT</code>.</p>
+<p>逻辑运算认为所有非零参数都表示<code>true</code>,参数<code>0</code>则表示<code>FALSE</code>.</p>
+<p><strong>短路效果</strong>:对于逻辑运算，如果第一个参数就能确定表达式结果，就不会对之后的参数进行运算。</p>
+<h2 id="移位运算"><a class="header" href="#移位运算">移位运算</a></h2>
+<ul>
+<li>
+<p><code>x&lt;&lt;k</code>:左移<code>k</code>位,丢弃最高<code>k</code> 位,并在右端补<code>k</code>个<code>0</code>.从左往右可结合:<code>x&lt;&lt;k&lt;&lt;j==(x&lt;&lt;k)&lt;&lt;j</code></p>
+</li>
+<li>
+<p>逻辑右移:<strong>Java</strong> 用<code>x&gt;&gt;&gt;k</code>:在左端补<code>k</code>个0.</p>
+</li>
+<li>
+<p>算术右移:<code>x&gt;&gt;k</code>表示.在左端补<code>k</code>个最高有效位的值.</p>
+</li>
+</ul>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: center">运算</th><th style="text-align: center">值</th></tr></thead><tbody>
+<tr><td style="text-align: center">x</td><td style="text-align: center">[01100011]  [10010101]</td></tr>
+<tr><td style="text-align: center">x&lt;&lt;4</td><td style="text-align: center">[00110000]  [01010000]</td></tr>
+<tr><td style="text-align: center">x&gt;&gt;&gt;4(逻辑右移)</td><td style="text-align: center">[00000110]  [00001001]</td></tr>
+<tr><td style="text-align: center">x&gt;&gt;4(算数右移)</td><td style="text-align: center">[00000110]  [11111001]</td></tr>
+</tbody></table>
+</div>
+<blockquote>
+<p>移位运算的优先级比<code>+ -</code>运算低</p>
+</blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="一些rust的杂七杂八"><a class="header" href="#一些rust的杂七杂八">一些<code>rust</code>的杂七杂八</a></h1>
 <ul>
 <li>
@@ -458,7 +492,7 @@ impl&lt;'a, T&gt; Iterator for IterMut&lt;'a, T&gt; {
 <p>todo</p>
 <h2 id="双向链表"><a class="header" href="#双向链表">双向链表</a></h2>
 <p>todo</p>
-
+<div style="break-before: page; page-break-before: always;"></div>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
