--- a/print.html
+++ b/print.html
@@ -205,6 +205,9 @@
 <li>
 <p><a href="./rust_linkedlist.html">用rust模拟链表</a></p>
 </li>
+<li>
+<p><a href="./%E6%99%BA%E8%83%BD%E6%8C%87%E9%92%88.html">智能指针</a></p>
+</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><ul>
 <li>FnOnce约束是call_once(<strong>self</strong>)，只能调用一次，一旦调用，Closure将丧失所有权</li>
