--- a/rust_index.html
+++ b/rust_index.html
@@ -152,6 +152,9 @@
 <li>
 <p><a href="./rust_linkedlist.html">用rust模拟链表</a></p>
 </li>
+<li>
+<p><a href="./%E6%99%BA%E8%83%BD%E6%8C%87%E9%92%88.html">智能指针</a></p>
+</li>
 </ul>
 
                     </main>
